...
	override func viewDidLoad() {
		super.viewDidLoad()

		self.tableView.estimatedRowHeight = CGFloat(60)
		self.tableView.rowHeight = UITableView.automaticDimension
		self.tableView.separatorStyle = .none
		self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: NSLocalizedString("New Post", comment: "New Post"), style: .plain, target: self, action: #selector(TweetListTableViewController.newPost(_:)))
		self.navigationItem.rightBarButtonItem?.accessibilityIdentifier = "New Post"
	}

	override func viewWillAppear(_ animated: Bool) {
		self.moduleInterface?.requestTweetsForUser("Tim Cook")
	}
	
	override func numberOfSections(in tableView: UITableView) -> Int {
		return 1
	}

...
