...
                                    <userDefinedRuntimeAttribute type="image" keyPath="image" value="gravatar"/>
                                </userDefinedRuntimeAttributes>
                            </view>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kkO-4a-nJg">
                                <rect key="frame" x="20" y="80" width="560" height="512"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" hint="Enter a tweet" identifier="TweetTextField"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" keyboardType="twitter"/>
                                <connections>
                                    <outlet property="delegate" destination="92a-sb-Tga" id="y8Z-rW-cOd"/>
                                </connections>
                            </textView>
...
