...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="pwg-bJ-8lD" id="mRp-QL-gfu"/>
                            <outlet property="delegate" destination="pwg-bJ-8lD" id="Jd7-Qw-RXh"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Clean Tweeter" id="MbN-RE-46L"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="o0j-X1-dta" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="971" y="183"/>
        </scene>
    </scenes>
...
